--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Member Club</title>
     <link rel="stylesheet" href="./styles/index.css">
-    <script src="./javascript/effects.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,8 +19,113 @@
                     <img src="./assets/Submit.svg" alt="submit button" width="20" height="20">
                 </div>
             </div>
+            <main>
+                <section id="first-section">
+                    <div id="profile">
+                        <div id="img">
+                            <img src="./assets/Picture.png" alt="Profile picture">
+                        </div>
+                        <div id="profile-details">
+                            <strong>Natália Miranda</strong>
+                            <span>Cliente desde 18/09/2023</span>
+                        </div>
+                    </div>
+                    <div id="historical">
+                        <div id="title">
+                            <span id="title">Histórico</span>
+                            <span id="description">7 cortes</span>
+                        </div>
+                        <div id="content">
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+
+                            <div id="tupla">
+                                <div>
+                                    <span id="date">29/04/2024</span>
+                                    <span id="time">18:30</span>
+                                </div>
+                                <div id="checked-image"></div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </section>
+                <section id="second-section">
+                    <div></div>
+                    <div></div>
+                </section>
+            </main>
         </div>
     </header>
-    <main>Testando main</main>
+    <script src="./javascript/effects.js"></script>
 </body>
 </html>
